feat(config): make bot presence text configurable

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Discord
 DISCORD_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN
 CHATBOT_CHANNEL_ID=YOUR_CHATBOT_CHANNEL_ID
+DISCORD_STATUS_MESSAGE=LISTENING_STATUS_TEXT
 
 # Google Gemini
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY
@@ -8,4 +9,3 @@ GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 # Paths
 MUSIC_DIRECTORY=music_files
 CONTEXT_FILE=chat_context.json
-
