refactor: modularize gemini cog

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ utils/__pycache__/telegram_downloader.cpython-310.pyc
 utils/__pycache__/tools.cpython-310.pyc
 .env
 cogs/cookies.txt
+cogs/ai/__pycache__/__init__.cpython-310.pyc
+cogs/ai/__pycache__/attachments.cpython-310.pyc
+cogs/ai/__pycache__/cog.cpython-310.pyc
+cogs/ai/__pycache__/history.cpython-310.pyc
+cogs/ai/__pycache__/response.cpython-310.pyc
