feat: config prompt file path

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 # Paths
 MUSIC_DIRECTORY=music_files
 CONTEXT_FILE=chat_context.json
+BOT_PROMPT_FILE=utils/default_prompt.txt
