--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-discord.py>=2.4.0\ngoogle-genai>=0.5.0\npydub>=0.25.1\nrequests>=2.31.0\nTelethon>=1.36.0\nyt-dlp>=2024.5.27\n
-
+discord.py>=2.4.0
+google-genai>=0.5.0
+pydub>=0.25.1
+requests>=2.31.0
+Telethon>=1.36.0
+yt-dlp>=2024.5.27
 uvloop>=0.19.0
+pytest
+flake8
+black
+isort
