feat: add host network mode to peacemusic service for IPv6 and performance.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   peacemusic:
     build: .
+    network_mode: "host" # Enables IPv6 (on Linux) and better performance
     restart: always
     env_file:
       - .env
