feat: add chat_context.json to docker volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - ./music_files:/app/music_files
       # Persist cookies if they exist
       - ./cogs/cookies.txt:/app/cogs/cookies.txt
+      # Persist AI chat history
+      - ./chat_context.json:/app/chat_context.json
