fix: Correct chat context JSON volume mount path to the cogs subdirectory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       # Persist cookies if they exist
       - ./cogs/cookies.txt:/app/cogs/cookies.txt
       # Persist AI chat history
-      - ./chat_context.json:/app/chat_context.json
+      - ./cogs/chat_context.json:/app/cogs/chat_context.json
